# mdpd

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
mdpd/: __init__.py  utils.py
tests/: test_utils.py
tests/fixtures/: header_only.csv  one_column.csv  simple_pattern.csv
