[tool.poetry]
name = "mdpd"
version = "0.1.0"
description = ""
authors = ["kyoto7250 <50972773+kyoto7250@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
