[tool.poetry]
name = "mdpd"
version = "0.2.1"
description = "a simpler tool for convert markdown table to pandas"
authors = ["kyoto7250 <50972773+kyoto7250@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/kyoto7250/mdpd"
repository = "https://github.com/kyoto7250/mdpd"
keywords = ["padnas", "markdown", "table", "test", "development"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2,<9.0.0"
black = ">=23.9.1,<25.0.0"
isort = ">=5.12,<7.0"
ruff = ">=0.0.292,<0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
